2008-05-05  Johan Euphrosine  <proppy@aminche.com>

	* gui/migration.c: Fix include path for e-dbhash.h, now in libebackend.

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #316390

	* calendar/gui/e-memos.c: (struct _EMemosPrivate), (categories_changed_cb),
	(setup_widgets), (e_memos_init), (e_memos_destroy):
	* calendar/gui/gnome-cal.c: (struct _GnomeCalendarPrivate), (setup_widgets),
	(categories_changed_cb), (gnome_calendar_init),
	(gnome_calendar_destroy):
	* calendar/gui/e-tasks.c: (struct _ETasksPrivate), (categories_changed_cb),
	(setup_widgets), (e_tasks_init), (e_tasks_destroy):
	Listen for changes in categories setup and propagate them to UI.

2008-04-30  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bnc #363908
	Evolution crashed during exit

	* gui/tasks-component.c: (destroy_component_view):

2008-04-30  Ashish Shrivastava <shashish@novell.com>

        ** Fix for bnc #368277
        Can't C & P Email Addresses from an Appt. to a Mail Message

	* gui/e-select-names-renderer.c:
	(e_select_names_renderer_start_editing):

2008-04-29  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #240823

	* gui/itip-utils.c: (comp_to_list):
	Send notification only to individuals and groups.

2008-04-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #524121

	* gui/e-calendar-table.c: (copy_row_cb):
	Fixing typo from patch for bug #516408.

2008-04-25  Danny Baumann  <dannybaumann@web.de>

	** Fix for bug #529893

	* gui/e-calendar-view.c: (e_calendar_view_get_tooltips):
	Properly set type hint on tooltip window.

2008-04-18  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #509923

	* gui/dialogs/comp-editor.c: (real_send_comp):
	* gui/e-calendar-view.c: (e_calendar_view_modify_and_send):
	* gui/e-cal-model-calendar.c: (ecmc_set_value_at):
	Send changes based on the user's choice of "all instances" or
	"only this instance" for recurring events.
	* gui/e-cal-model-calendar.c: (ecmc_set_value_at):
	Also modify objects based on the user's choice.
