@@ -43,7 +43,8 @@
 #include "alarm-notify-dialog.h"
 #include "config-data.h"
 #include "util.h"
-#include <e-util/e-icon-factory.h>
+#include "e-util/e-icon-factory.h"
+#include "e-util/e-util-private.h"
 
 
 
@@ -242,7 +243,13 @@ notified_alarms_dialog_new (void)
 
 			G_TYPE_POINTER /* FuncInfo*/));
 
-	an->xml = glade_xml_new (EVOLUTION_GLADEDIR "/alarm-notify.glade", NULL, NULL);
+	char *gladefile;
+
+	gladefile = g_build_filename (EVOLUTION_GLADEDIR,
+				      "alarm-notify.glade",
+				      NULL);
+	an->xml = glade_xml_new (gladefile, NULL, NULL);
+	g_free (gladefile);
 	if (!an->xml) {
 		g_message ("alarm_notify_dialog(): Could not load the Glade XML file!");
 		g_free (an);
